[tool.poetry]
name = "equinox"
version = "0.1.0"
description = "A Python CLI tool for downgrading i(Pad)OS devices."
authors = [
    "m1sta <adamhamdi31@gmail.com>",
    "miniexploit <miniexploitttt@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.6"
coloredlogs = "^15.0.1"
remotezip = "^0.12.1"
ipsw-parser = "^1.1.5"
tqdm = "^4.65.0"
pymobiledevice3 = "2.25.0"

[tool.poetry.scripts]
equinox = "equinox.__main__:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/miniexploit/pyfuturerestore/issues"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
